// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mops build error 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
moc-wrapper ["-c","--idl","-o",".mops/.build/foo.wasm","src/Foo.mo","--package","core",".mops/core@1.0.0/src","--release","--public-metadata","candid:service","--public-metadata","candid:args"]
Adding metadata to .mops/.build/foo.wasm

✓ Built 1 canister successfully",
}
`;

exports[`mops build error 2`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "build canister bar",
}
`;

exports[`mops build error 3`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "build canister foo
build canister bar",
}
`;

exports[`mops build success 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
moc-wrapper ["-c","--idl","-o",".mops/.build/foo.wasm","src/Foo.mo","--package","core",".mops/core@1.0.0/src","--release","--public-metadata","candid:service","--public-metadata","candid:args"]
Adding metadata to .mops/.build/foo.wasm
build canister bar
moc-wrapper ["-c","--idl","-o",".mops/.build/bar.wasm","src/Bar.mo","--package","core",".mops/core@1.0.0/src","--release","--incremental-gc","--public-metadata","candid:service","--public-metadata","candid:args"]
Candid compatibility check passed for canister bar
Adding metadata to .mops/.build/bar.wasm

✓ Built 2 canisters successfully",
}
`;

exports[`mops build success 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo

✓ Built 1 canister successfully",
}
`;

exports[`mops build success 3`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister bar

✓ Built 1 canister successfully",
}
`;

exports[`mops build success 4`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
build canister bar

✓ Built 2 canisters successfully",
}
`;

exports[`mops check error 1`] = `
{
  "exitCode": 1,
  "stderr": "Error.mo:1.1-5.2: type error [M0096], expression of type
  actor {hello : shared () -> async Text}
cannot produce expected type
  ()
Error.mo:7.1-7.21: type error [M0057], unbound variable thisshouldnotcompile
✗ Check failed for file Error.mo (exit code: 1)",
  "stdout": "",
}
`;

exports[`mops check error 2`] = `
{
  "exitCode": 1,
  "stderr": "Ok.mo: No such file or directory
✗ Check failed for file Ok.mo (exit code: 1)",
  "stdout": "",
}
`;

exports[`mops check success 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ Ok.mo",
}
`;

exports[`mops check success 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "check Running moc:
moc-wrapper ["--check","Ok.mo","--package","core",".mops/core@2.0.0/src"]
✓ Ok.mo",
}
`;

exports[`mops check warning 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ M0223.mo",
}
`;

exports[`mops check warning verbose 1`] = `
{
  "exitCode": 0,
  "stderr": "Warning.mo:3.9-3.15: warning [M0194], unused identifier unused (delete or rename to wildcard \`_\` or \`_unused\`)",
  "stdout": "check Running moc:
moc-wrapper ["--check","Warning.mo","--package","core",".mops/core@2.0.0/src"]
✓ Warning.mo",
}
`;

exports[`mops check warning with --warnings flag 1`] = `
{
  "exitCode": 1,
  "stderr": "Warning.mo:3.9-3.15: warning [M0194], unused identifier unused (delete or rename to wildcard \`_\` or \`_unused\`)
✗ Check failed for file Warning.mo (exit code: 1)",
  "stdout": "",
}
`;

exports[`mops check-candid 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 3`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 4`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 5`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 6`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "",
}
`;

exports[`mops check-candid 7`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "",
}
`;

exports[`mops check-candid 8`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "",
}
`;

exports[`mops check-candid 9`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "",
}
`;

exports[`mops lint 1`] = `
{
  "exitCode": 1,
  "stderr": "  × [ERROR]: no-bool-switch
   ╭─[<TEST_DIR>/lint/src/NoBoolSwitch.mo:3:5]
 2 │       public func boolSwitch(b : Bool) : Bool {
 3 │ ╭─▶     switch (b) {
 4 │ │         case false { false };
 5 │ │         case true { true };
 6 │ ├─▶     };
   · ╰──── Don't switch on boolean values, use if instead
 7 │       };
   ╰────

Error: Found 1 errors
Lint failed with exit code 1",
  "stdout": "lint Running lintoko:
<CACHE>/lintoko/0.7.0/lintoko
["--verbose","--rules","lints","<TEST_DIR>/lint/src/Ok.mo","<TEST_DIR>/lint/src/NoBoolSwitch.mo"]
DEBUG file input: <TEST_DIR>/lint/src/Ok.mo
DEBUG file input: <TEST_DIR>/lint/src/NoBoolSwitch.mo
DEBUG Loading rules from: lints
DEBUG Parsing extra rule at: lints/no-bool-switch.toml
DEBUG Linting file: <TEST_DIR>/lint/src/NoBoolSwitch.mo
DEBUG Linting file: <TEST_DIR>/lint/src/Ok.mo",
}
`;

exports[`mops lint 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "lint Running lintoko:
<CACHE>/lintoko/0.7.0/lintoko
["--verbose","--rules","lints","<TEST_DIR>/lint/src/Ok.mo"]
DEBUG file input: <TEST_DIR>/lint/src/Ok.mo
DEBUG Loading rules from: lints
DEBUG Parsing extra rule at: lints/no-bool-switch.toml
DEBUG Linting file: <TEST_DIR>/lint/src/Ok.mo
✓ Lint succeeded",
}
`;

exports[`mops lint 3`] = `
{
  "exitCode": 1,
  "stderr": "  × [ERROR]: no-bool-switch
   ╭─[<TEST_DIR>/lint/src/NoBoolSwitch.mo:3:5]
 2 │       public func boolSwitch(b : Bool) : Bool {
 3 │ ╭─▶     switch (b) {
 4 │ │         case false { false };
 5 │ │         case true { true };
 6 │ ├─▶     };
   · ╰──── Don't switch on boolean values, use if instead
 7 │       };
   ╰────

Error: Found 1 errors
Lint failed with exit code 1",
  "stdout": "lint Running lintoko:
<CACHE>/lintoko/0.7.0/lintoko
["--verbose","--rules","lints","<TEST_DIR>/lint/src/NoBoolSwitch.mo"]
DEBUG file input: <TEST_DIR>/lint/src/NoBoolSwitch.mo
DEBUG Loading rules from: lints
DEBUG Parsing extra rule at: lints/no-bool-switch.toml
DEBUG Linting file: <TEST_DIR>/lint/src/NoBoolSwitch.mo",
}
`;

exports[`mops lint 4`] = `
{
  "exitCode": 1,
  "stderr": "No files found for filter 'DoesNotExist'",
  "stdout": "",
}
`;
